--- a/index.html
+++ b/index.html
@@ -79,19 +79,217 @@
                             <div class="question">?</div>
                         </div>
                     </div>
-                    <div class="slider-top"></div>
+                    <div class="slider-top">
+                        <div class="text-top">
+                            <div class="adres">ул. Республиканская д. 12А/3</div>
+                            <div class="service">Клининг</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-slide slider">
-                    <div class="slider"></div>
-                    <div class="slider-top"></div>
+                <div class="swiper-slide">
+                    <div class="slider rtel">
+                        <div class="text-top">ИП Бобров Сергей Витальевич</div>
+                        <div class="otziv">
+                            1K
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top rtel2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">Ремонт телефонов</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-slide slider">
-                    <div class="slider"></div>
-                    <div class="slider-top"></div>
+                <div class="swiper-slide">
+                    <div class="slider rteh">
+                        <div class="text-top">Комаров Евгений</div>
+                        <div class="otziv">
+                            1.7К
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top rteh2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">Ремонт бытовой техники</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="swiper-slide slider">
-                    <div class="slider"></div>
-                    <div class="slider-top"></div>
+                <div class="swiper-slide">
+                    <div class="slider pc">
+                        <div class="text-top">ИП Романов ВП</div>
+                        <div class="otziv">
+                            635
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top pc2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">IT специалисты</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="swiper-button-next next1"></div>
+        <div class="swiper-button-prev prev1"></div>
+    </div>
+</section>
+<section class="section-board">
+    <h1>Доска почета</h1>
+    <p>Те, кто подтвердили свой статус и получили положительные оценки</p>
+    <div class="hudshie">
+        <div class=" swiper worst">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slider">
+                        <div class="text-top">ООО Клининг Сервис</div>
+                        <div class="otziv">
+                            101
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top">
+                        <div class="text-top">
+                            <div class="adres">ул. Республиканская д. 12А/3</div>
+                            <div class="service">Клининг</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider rtel">
+                        <div class="text-top">ИП Бобров Сергей Витальевич</div>
+                        <div class="otziv">
+                            1K
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top rtel2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">Ремонт телефонов</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider rteh">
+                        <div class="text-top">Комаров Евгений</div>
+                        <div class="otziv">
+                            1.7К
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top rteh2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">Ремонт бытовой техники</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slider pc">
+                        <div class="text-top">ИП Романов ВП</div>
+                        <div class="otziv">
+                            635
+                            <div class="question">?</div>
+                        </div>
+                    </div>
+                    <div class="slider-top pc2">
+                        <div class="text-top">
+                            <div class="adres">на выезд</div>
+                            <div class="service">IT специалисты</div>
+                        </div>
+                        <h1>Фото из последних отзывов:</h1>
+                        <div class="center">
+                            <div class="img-1"></div>
+                            <div class="img-2"></div>
+                            <div class="img-3"></div>
+                            <div class="img-4"></div>
+                        </div>
+                        <div class="bottom">
+                            <a href="#" class="ot">Отзыв</a>
+                            <a href="#" class="pod">Подробнее</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
