--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <h1>Доска почета</h1>
     <p>Те, кто подтвердили свой статус и получили положительные оценки</p>
     <div class="hudshie">
-        <div class=" swiper worst">
+        <div class=" swiper board">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slider">
@@ -293,8 +293,8 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-button-next next1"></div>
-        <div class="swiper-button-prev prev1"></div>
+        <div class="swiper-button-next next2"></div>
+        <div class="swiper-button-prev prev2"></div>
     </div>
 </section>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
