--- a/index.html
+++ b/index.html
@@ -297,6 +297,201 @@
         <div class="swiper-button-prev prev2"></div>
     </div>
 </section>
+<section class="section-estimation">
+<div class="estimat">Оценки по категориям</div>
+    <div class="categories">
+        <div class="wrap">
+            <div class="kat">
+                <div class="kat1">
+                    <div class="auto">
+                <h2>Транспорт, перевозки</h2>
+                <ul>
+                    <li><a href="#">Автосервис</a></li>
+                    <li><a href="#">Аренда авто</a></li>
+                    <li><a href="#">Коммерческие перевозки</a></li>
+                    <li><a href="#">Грузчики</a></li>
+                    <li><a href="#">Переезды</a></li>
+                    <li><a href="#">Спецтехника</a></li>
+                </ul>
+            </div>
+                    <div class="remot">
+               <h2>Ремонт, строительство</h2>
+               <ul>
+                   <li><a href="#">Сборка и ремонт мебели</a></li>
+                   <li><a href="#">Отделочные работы</a></li>
+                   <li><a href="#">Электрика</a></li>
+                   <li><a href="#">Сантехника</a></li>
+                   <li><a href="#">Ремонт офиса</a></li>
+                   <li><a href="#">Остекление балкона</a></li>
+                   <li><a href="#">Ремонт ванной</a></li>
+                   <li><a href="#">Строительство бань,саун</a></li>
+                   <li><a href="#">Ремонт кухни</a></li>
+                   <li><a href="#">Строительство домов,коттеджей</a></li>
+                   <li><a href="#">Ремонт квартиры</a></li>
+               </ul>
+           </div>
+                    <div class="beauty">
+                <h2>Красота и здоровье</h2>
+                <ul>
+                    <li><a href="#">Улуги парикмахера</a></li>
+                    <li><a href="#">Маникюр педикюр</a></li>
+                    <li><a href="#">Макияж</a></li>
+                    <li><a href="#">Косметология,эпиляция</a></li>
+                    <li><a href="#">СПА-услуги,здоровье</a></li>
+                    <li><a href="#">Тату,пирсниг</a></li>
+                    <li><a href="#">Другое</a></li>
+                </ul>
+            </div>
+                    <div class="technic">
+                <h2>Ремонт и обслуживание техники</h2>
+                <ul>
+                    <li><a href="#">Телевизоры</a></li>
+                    <li><a href="#">Мобильные устройства</a></li>
+                    <li><a href="#">Мелкая бытовая техника</a></li>
+                    <li><a href="#">Фото-, видео-, техника</a></li>
+                    <li><a href="#">Компьютерная техника</a></li>
+                    <li><a href="#">Игровые приставки</a></li>
+                    <li><a href="#">Крупная бытовая техника</a></li>
+                </ul>
+            </div>
+                </div>
+                <div class="kat2">
+                    <div class="equipment">
+                <h2>Оборудование, производство</h2>
+                <ul>
+                    <li><a href="#">Аренда оборудования</a></li>
+                    <li><a href="#">Монтаж и обслуживание оборудования</a></li>
+                    <li><a href="#">Производство, обработка</a></li>
+                </ul>
+            </div>
+                    <div class="business">
+                <h2>Деловые услуги</h2>
+                <ul>
+                    <li><a href="#">Бухгалтерия, финансы</a></li>
+                    <li><a href="#">Консультирование</a></li>
+                    <li><a href="#">Набор и коррекция текста</a></li>
+                    <li><a href="#">Перевод</a></li>
+                    <li><a href="#">Юридические услуги</a></li>
+                </ul>
+            </div>
+                    <div class="it">
+                <h2>IT, интернет, телеком</h2>
+                <ul>
+                    <li><a href="#">Cоздание и продвижение сайтов</a></li>
+                    <li><a href="#">Установка и настройка ПО</a></li>
+                    <li><a href="#">Настройка интернета и сетей</a></li>
+                    <li><a href="#">Мастер на все случаи</a></li>
+                </ul>
+            </div>
+                    <div class="IT">
+                <h2>IT, интернет, телеком</h2>
+                <ul>
+                    <li><a href="#">Cоздание и продвижение сайтов</a></li>
+                    <li><a href="#">Установка и настройка ПО</a></li>
+                    <li><a href="#">Настройка интернета и сетей</a></li>
+                    <li><a href="#">Мастер на все случаи</a></li>
+                </ul>
+            </div>
+                </div>
+                <div class="kat4">
+                    <div class="klinig">
+                <h2>Уборка</h2>
+                <ul>
+                    <li><a href="#">Вывоз мусора</a></li>
+                    <li><a href="#">Генеральная уборка</a></li>
+                    <li><a href="#">Мойка окон</a></li>
+                    <li><a href="#">Простая уборка</a></li>
+                    <li><a href="#">Уборка после ремонта</a></li>
+                    <li><a href="#">Чистка мягкой мебели</a></li>
+                </ul>
+            </div>
+                    <div class="bit">
+                <h2>Бытовые услуги</h2>
+                <ul>
+                    <li><a href="#">Изготовление ключей</a></li>
+                    <li><a href="#">Пошив и ремонт одежды</a></li>
+                    <li><a href="#">Химчистка, стирка</a></li>
+                    <li><a href="#">Ювелирные услуги</a></li>
+                </ul>
+            </div>
+                    <div class="food">
+                <h2>Доставка еды и продуктов</h2>
+                <ul>
+                    <li><a href="#">Доставка напрямую от ресторана</a></li>
+                </ul>
+            </div>
+                    <div class="nyni">
+                <h2>Няни, сиделки</h2>
+                <ul>
+
+                </ul>
+            </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section-safety">
+    <div class="bos"></div>
+    <div class="safety">
+        <div class="wrap">
+            <h1>Безопасная сделка</h1>
+            <div class="safe">
+                <div class="garant">
+                    <div class="text-top">
+                        <div class="circle">1</div>
+                        <div class="p">Гарантии</div>
+                    </div>
+                    <p>Исполнители получают деньги только после успшеного завершения сделки и потдверждения от клиента.</p>
+                </div>
+                <div class="organizations"><div class="text-top">
+                    <div class="circle">2</div>
+                    <div class="p">Проверенные организации</div>
+                </div>
+                    <p>Все организации, подключённые к безопасной сделке проходят высокий контроль и предоставляют договоры.</p></div>
+                <div class="commission"><div class="text-top">
+                    <div class="circle">3</div>
+                    <div class="p">Минимальная комиссия</div>
+                </div>
+                    <p>Коммисия сервиса минимальна - окупает только эквайринг и бонусную систему платформы.</p></div>
+                <div class="documents"><div class="text-top">
+                    <div class="circle">4</div>
+                    <div class="p">Документооборот</div>
+                </div>
+                    <p>Документооборот: чеки, данные по сделке, закрывающие документы всегда доступны в личном кабинете.</p></div>
+            </div>
+            <h3>А так же:</h3>
+            <div class="online">
+                <a href="#">Онлайн-поддержка 24/7,</a>
+                <a href="#">онлайн оплата,</a>
+                <a href="#">контроль сделки (в личном кабинете),</a>
+                <a href="#">отзывы организациям,</a>
+                <a href="#"> проверенные организации</a>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section-verified">
+    <div class="wrap">
+        <div class="verified">
+            <h1>Проверенные организации рядом</h1>
+            <lable>
+                <div class="select"><select name="">
+                    <option value="">- выберите категорию услуг</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                    <option value="">Автосервис</option>
+                </select></div>
+            </lable>
+        </div>
+    </div>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A0d1edcac58375ea73c20f9a559f1f6c7aa821cb59c74a95e85d8be7207185dea&amp;width=100%25&amp;height=500&amp;lang=ru_RU&amp;scroll=true"></script>
+</section>
 <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
