--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 </section>
 <section class="section-worst">
     <h1>Худшие</h1>
+    <h2>ТОП 10</h2>
     <p>Исполнители и организации в городе</p>
     <div class="hudshie">
         <div class=" swiper worst">
@@ -183,7 +184,8 @@
 </section>
 <section class="section-board">
     <h1>Доска почета</h1>
-    <p>Те, кто подтвердили свой статус и получили положительные оценки</p>
+    <h2>ТОП 10</h2>
+    <p>те, кто подтвердили свой статус и получили положительные оценки</p>
     <div class="hudshie">
         <div class=" swiper board">
             <div class="swiper-wrapper">
